Allow the table elements TR, TD, and TH to inherit their vertical-alignmnet. This fixes issues with people using the depricated valign attributes in table markup that normally cascaded.

--- a/wdn/templates_3.0/css/content/basestyles.css
+++ b/wdn/templates_3.0/css/content/basestyles.css
@@ -85,3 +85,6 @@ big {
 small {
 	font-size: smaller;
 }
+tr, td, th {
+	vertical-align: inherit;
+}
